Update Сервис самокатов (для Github).ipynb

--- a/Сервис самокатов (для Github).ipynb
+++ b/Сервис самокатов (для Github).ipynb
@@ -5,10 +5,8 @@
    "id": "466d8b9c",
    "metadata": {},
    "source": [
-    "# Проект: Статистический анализ данных\n",
+    "# Исследование поведения пользователей сервиса аренды самокатов\n",
     "\n",
-    "\n",
-    "Вы аналитик популярного сервиса аренды самокатов GoFast. Вам передали данные о некоторых пользователях из нескольких городов, а также об их поездках. Проанализируйте данные и проверьте некоторые гипотезы, которые могут помочь бизнесу вырасти.\n",
     "\n",
     "Чтобы совершать поездки по городу, пользователи сервиса GoFast пользуются мобильным приложением. Сервисом можно пользоваться:\n",
     "\n",
@@ -22,7 +20,7 @@
     "- стоимость одной минуты поездки - 6 рублей;\n",
     "- стоимость старта бесплатно.\n",
     "    \n",
-    "В данном проекте необходимо проанализировать данные из популярного сервиса аренды самокатов GoFast. Основные данные собержатся в трех датафреймах: users_go.csv (данные о пользователях) в которых есть идентификатор пользователя, его имя, возраст, город и тип подписки;  rides_go.csv (данные о поездках) здесь помимо id пользователя содержится информация о расстоянии, которое проехал пользователь за сессию, продолжительность поездки и дата поездки; subscriptions_go.csv (данные по подписках) здесь тип подписки, стоимость одной минуты по подписке, стоимость начала поездки, стоимость ежедневного платежа по подписке.\n",
+    "В данном проекте необходимо проанализировать данные из популярного сервиса аренды самокатов GoFast. Основные данные содержатся в трех датафреймах: users_go.csv (данные о пользователях) в которых есть идентификатор пользователя, его имя, возраст, город и тип подписки;  rides_go.csv (данные о поездках) здесь помимо id пользователя содержится информация о расстоянии, которое проехал пользователь за сессию, продолжительность поездки и дата поездки; subscriptions_go.csv (данные по подписках) здесь тип подписки, стоимость одной минуты по подписке, стоимость начала поездки, стоимость ежедневного платежа по подписке.\n",
     "    \n",
     "<b>Цель исследования:<b>\n",
     "    \n",
